# monitord

./: .gitignore  CMakeLists.txt  CPUTemperatureMonitor.cpp  CPUTemperatureMonitor.hpp  CPUTemperatureObserver.cpp  CPUTemperatureObserver.hpp  IObserver.hpp  ISubject.hpp  LICENSE  README.md  SystemError.hpp  main.cpp
inc/: CPUTemperatureMonitor.hpp  CPUTemperatureObserver.hpp  IObserver.hpp  ISubject.hpp  SystemError.hpp  SystemMonitor.hpp  SystemObserver.hpp  WeatherObserver.hpp  WeatherStation.hpp
src/: CPUTemperatureMonitor.cpp  CPUTemperatureObserver.cpp  SystemMonitor.cpp  SystemObserver.cpp  WeatherObserver.cpp  WeatherStation.cpp
